# xicommon

./: .gitignore  Pipfile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
tests/: conftest.py  test_caching.py  test_config.py  test_const.py  test_crosslinker.py  test_fragment_peptides.py  test_fragmentation.py  test_mass.py  test_modifications.py  test_output_format.py  test_spectra_reader.py  test_synthetic_spectra.py  test_utils.py  test_xi_logging.py
tests/cython/: __init__.py  test_argsort_byte_ranges.py  test_copy_ranges.py  test_fast_unique.py  test_inplace_reorder.py  test_num_lexico_permutation.py  test_unique_byte_ranges.py
tests/filters/: test_base_filter.py  test_charge_reducer.py  test_denoise_filter.py  test_filters.py  test_isotope_detector.py  test_isotope_reducer.py  test_loss_cluster_filter.py
tests/fixtures/: 190410_5psm_PSM_xiFDR1.2.30.59dev.csv  B180820_06_HSA_BS3_HCD_30_top10_scans.mgf  CtermXlinkProtein.mgf  FixedMod.FASTA  ModTestProtein.FASTA  MultipleSpectra.mgf  NtermXlinkProtein.mgf  OneMiniProtein.FASTA  OneMiniProtein.mgf  TwoPeptides.FASTA  hsa_result_dist_xiview.csv  link_site_folding.FASTA  link_site_folding.mgf  simple_test_intensities.csv  simple_test_mzs.csv  test_cl_specificity_bonus.mgf  test_run_config.json  test_run_config_mods.json  uniprot-mitochondrion_human.FASTA  uniprot-proteome_myco.FASTA  xifdr_HSA_example.csv
xicommon/: __init__.py  cache.py  config.py  const.py  context_base.py  dtypes.py  fragment_peptides.py  fragmentation.py  helper.py  mass.py  mock_context.py  modifications.py  output_format.py  simple_databases.py  spectra_reader.py  synthetic_spectra.py  utils.py  xi_logging.py
xicommon/cython/: __init__.py  argsort_byte_ranges.pyx  compare_byte_ranges.pxd  compare_byte_ranges.pyx  copy_byte_ranges.pyx  db_uuid.pyx  fast_candidate_scores.pyx  fast_lookup.pyx  fast_unique.pyx  isin_set.pyx  (+5 more)
(+38 files in other folders)
