[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm", "Cython>=3.0.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "xicommon"
version = "1.0.4"
description = "Common library for crosslinking mass spectrometry tools"
readme = "README.md"
requires-python = ">=3.10.1"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "Rappsilber Laboratory"}
]
dependencies = [
    # Core mass spectrometry libraries
    "pyteomics>=4.0.0,!=4.7.4,!=4.7.3",
    "pyteomics.cythonize>=0.2.2",

    # Numerical and data processing
    "numpy>=1.20,<2.0",
    "pandas>=1.1.0",

    # Performance optimization
    "cython>=3.0.0,<3.1.0",

    # XML parsing (for mzML files)
    "lxml",

    # Compression support
    "zipfile-deflate64",

    # Utilities
    "memoized-property",
    "termcolor",
    "pygments",
    "progress",
    "dirlock",
    "fisher-py",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=3.6.4",
    "pytest-cov",
    "pytest-flake8>=1.1.0",
    "flake8==4.0.1",
    "build",
    "memory-profiler",
    "pprofile",
    "py-spy",
]

[project.urls]
"Homepage" = "https://github.com/Rappsilber-Laboratory/xicommon"
"Source" = "https://github.com/Rappsilber-Laboratory/xicommon"

[tool.setuptools]
packages = ["xicommon"]
include-package-data = true

[tool.setuptools.package-data]
xicommon = [
    "cython/*.pyx*",
    "cython/*.pxd",
    "cython/*.py",
    "filters/*.py",
]

[tool.cibuildwheel]
# Build for Python 3.10, 3.11, and 3.12
build = ["cp310-*", "cp311-*", "cp312-*"]

# Skip musllinux builds
skip = ["*-musllinux_*"]

# Build for multiple architectures
[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
